Fix border-top flicker during transition

--- a/src/components/Divider/Divider.css
+++ b/src/components/Divider/Divider.css
@@ -1,4 +1,5 @@
 .divider {
   grid-column: 1 / -1;
+  margin-top: 3px; /* don't delete, this fixes border-top flicker during transition */
   border-top: 1px solid gray;
 }
